--- a/app/src/main/res/layout/clock_info_item.xml
+++ b/app/src/main/res/layout/clock_info_item.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="8dp"
+
+    android:layout_marginTop="2dp"
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    app:cardElevation="0dp"
+    app:cardCornerRadius="0dp"
     android:layout_height="64dp">
 
     <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
@@ -11,7 +15,7 @@
 
 
         <TextView
-            android:id="@+id/clock_info_item_number_lesson"
+            android:id="@+id/clock_info_item_number_lesson_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -33,24 +37,24 @@
             android:layout_height="match_parent"
             tools:layout_editor_absoluteY="0dp"
             android:id="@+id/view"
-            app:layout_constraintStart_toEndOf="@+id/clock_info_item_number_lesson"
+            app:layout_constraintStart_toEndOf="@+id/clock_info_item_number_lesson_text_view"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="24dp" />
 
         <TextView
-            android:textColor="#5e5e5e"
-            android:textSize="18sp"
-            android:id="@+id/textView2"
+            android:id="@+id/clock_info_item_title_lesson"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="С 8:30 до 9:15"
-            app:layout_constraintStart_toStartOf="@+id/view"
-            android:layout_marginStart="16dp"
             android:layout_marginBottom="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView3" />
+            android:layout_marginStart="16dp"
+            android:textColor="#5e5e5e"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/clock_info_item_free_time_text_view"
+            app:layout_constraintStart_toStartOf="@+id/view"
+            tools:text="Русский язык" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/clock_info_item_is_now_image_view"
             android:layout_width="20dp"
             android:layout_height="20dp"
             app:srcCompat="@android:drawable/presence_online"
@@ -63,14 +67,28 @@
 
         <TextView
             android:textSize="12sp"
-            android:id="@+id/textView3"
+            android:id="@+id/clock_info_item_free_time_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="перемена после урока 10 минут"
+            tools:text="перемена после урока 10 минут"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="12dp"
             app:layout_constraintStart_toStartOf="@+id/view"
             android:layout_marginStart="16dp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:text="с 8:30 до 9:15"
+            app:layout_constraintEnd_toStartOf="@+id/clock_info_item_is_now_image_view"
+            app:layout_constraintStart_toEndOf="@+id/clock_info_item_free_time_text_view"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp" />
 
     </android.support.constraint.ConstraintLayout>
 
