--- a/app/src/main/res/layout/fragment_timetable_clock.xml
+++ b/app/src/main/res/layout/fragment_timetable_clock.xml
@@ -3,67 +3,126 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#eaeaea"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     tools:context="com.akamyshev.timetableclock.TimetableClock">
 
         <!--android:background="#ffeeeeee"-->
     <com.akamyshev.timetableclock.TimeX.ArcProgress
         android:id="@+id/arc_progress_view"
-        android:paddingTop="12dp"
-        android:padding="6dp"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-        custom:arc_progress="0"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:padding="6dp"
+        android:paddingTop="6dp"
+        android:visibility="gone"
         custom:arc_angle="230"
-        custom:arc_unfinished_color="#b6b6b6"
-        custom:arc_finished_color="#5ecc69"
+        custom:arc_bottom_text="10 минут"
         custom:arc_bottom_text_size="22sp"
+        custom:arc_finished_color="#5e99cc"
+        custom:arc_max="100"
+        custom:arc_progress="70"
         custom:arc_stroke_width="16dp"
         custom:arc_suffix_text_padding="-8dp"
-        custom:arc_suffix_text_size="32sp"
-        custom:arc_suffix_text="'"
-        custom:arc_bottom_text="Закончится через"
+        custom:arc_suffix_text_size="0sp"
+        custom:arc_unfinished_color="#b6b6b6"
         custom:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="8dp"
         custom:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="8dp"
-        custom:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="32dp" />
+        custom:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView2"
+        android:id="@+id/clock_lessons_recycler_view"
         android:layout_width="0dp"
-        android:layout_height="239dp"
-        android:layout_marginBottom="60dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        custom:layout_constraintBottom_toBottomOf="parent"
-        custom:layout_constraintEnd_toEndOf="parent"
-        custom:layout_constraintHorizontal_bias="0.0"
-        custom:layout_constraintStart_toStartOf="parent" />
+        android:layout_height="374dp"
 
-    <android.support.v7.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="37dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        custom:layout_constraintBottom_toTopOf="@+id/recyclerView2"
+        android:fadeScrollbars="false"
+        android:maxHeight="20dp"
+        android:scrollbarSize="2dp"
+        android:scrollbarStyle="outsideInset"
+        android:scrollbars="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.742"
+        custom:layout_constraintBottom_toBottomOf="parent"
+        custom:layout_constraintStart_toStartOf="parent" />
+
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="#fff"
+        app:itemTextColor="#fff"
+        app:menu="@xml/menu"
+        tools:layout_editor_absoluteX="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:rcBackgroundColor="#b1b1b1"
+
+        app:rcMax="100"
+        app:rcProgress="40"
+        app:rcProgressColor="#7da8fd"
+        app:rcRadius="2dp"
+        android:id="@+id/roundCornerProgressBar"
+        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="0dp"
+        android:layout_height="38dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+
+        app:cardCornerRadius="0dp"
+        app:cardElevation="0dp"
+
+        app:layout_constraintVertical_bias="0.365"
+        custom:layout_constraintBottom_toTopOf="@+id/clock_lessons_recycler_view"
         custom:layout_constraintEnd_toEndOf="parent"
-        custom:layout_constraintHorizontal_bias="0.562"
         custom:layout_constraintStart_toStartOf="parent"
         custom:layout_constraintTop_toBottomOf="@+id/arc_progress_view"
-        custom:layout_constraintVertical_bias="1.0">
+        app:layout_constraintHorizontal_bias="0.5">
+
         <TextView
-            android:textSize="18sp"
-            tools:text="Идет 5 урок"
-            android:gravity="center_vertical|center_horizontal"
             android:id="@+id/clock_info_label"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:gravity="center_vertical|center_horizontal"
+            android:padding="8dp"
+            android:text="Идет 5 урок"
+            android:textSize="18sp" />
     </android.support.v7.widget.CardView>
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="До конца урока осталось 23 минуты"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/clock_lessons_recycler_view"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/roundCornerProgressBar" />
 
 </android.support.constraint.ConstraintLayout>
