--- a/app/src/main/res/layout/clock_info_item.xml
+++ b/app/src/main/res/layout/clock_info_item.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     app:cardElevation="0dp"
     app:cardCornerRadius="0dp"
-    android:layout_height="64dp">
+    android:layout_height="68dp">
 
     <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -24,8 +24,8 @@
             android:layout_marginTop="8dp"
             android:gravity="center_horizontal"
 
-            android:textSize="22sp"
             android:textColor="#606060"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -45,13 +45,13 @@
             android:id="@+id/clock_info_item_title_lesson"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
             android:layout_marginStart="16dp"
             android:textColor="#5e5e5e"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/clock_info_item_free_time_text_view"
             app:layout_constraintStart_toStartOf="@+id/view"
-            tools:text="Русский язык" />
+            tools:text="Русский язык"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="7dp" />
 
         <ImageView
             android:id="@+id/clock_info_item_is_now_image_view"
@@ -66,29 +66,41 @@
             android:layout_marginBottom="8dp" />
 
         <TextView
-            android:textSize="12sp"
             android:id="@+id/clock_info_item_free_time_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="перемена после урока 10 минут"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="12dp"
+            android:layout_marginStart="16dp"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="10sp"
             app:layout_constraintStart_toStartOf="@+id/view"
-            android:layout_marginStart="16dp" />
+            tools:text="перемена после урока 10 минут"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_height="18dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="с 8:30 до 9:15"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/clock_info_item_is_now_image_view"
             app:layout_constraintStart_toEndOf="@+id/clock_info_item_free_time_text_view"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" />
+            tools:layout_editor_absoluteY="26dp" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="с 8:30 до 9:15"
+            android:textSize="12sp"
+            app:layout_constraintTop_toBottomOf="@+id/clock_info_item_title_lesson"
+            app:layout_constraintStart_toEndOf="@+id/view"
+            android:layout_marginStart="16dp" />
 
     </android.support.constraint.ConstraintLayout>
 
