--- a/app/src/main/res/layout/fragment_timetable_clock.xml
+++ b/app/src/main/res/layout/fragment_timetable_clock.xml
@@ -36,7 +36,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/clock_lessons_recycler_view"
         android:layout_width="0dp"
-        android:layout_height="374dp"
+        android:layout_height="0dp"
 
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
@@ -47,10 +47,12 @@
         android:scrollbarStyle="outsideInset"
         android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.742"
-        custom:layout_constraintBottom_toBottomOf="parent"
-        custom:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/roundCornerProgressBar"
+        custom:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation" />
 
 
     <android.support.design.widget.BottomNavigationView
@@ -117,12 +119,15 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="До конца урока осталось 23 минуты"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/clock_lessons_recycler_view"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/roundCornerProgressBar" />
+        android:text="до конца урока осталось 23 минуты"
+        android:textColor="#fff"
+        app:layout_constraintBottom_toBottomOf="@+id/roundCornerProgressBar"
+        app:layout_constraintEnd_toEndOf="@+id/roundCornerProgressBar"
+        app:layout_constraintStart_toStartOf="@+id/roundCornerProgressBar"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
 </android.support.constraint.ConstraintLayout>
