--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,6 @@
         android:name="com.akamyshev.timetableclock.TimetableClock"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/TODO" />
+        android:id="@+id/clockView" />
 
 </FrameLayout>
