--- a/app/src/main/res/layout/fragment_timetable_clock.xml
+++ b/app/src/main/res/layout/fragment_timetable_clock.xml
@@ -42,9 +42,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:fadeScrollbars="false"
-        android:maxHeight="20dp"
         android:scrollbarSize="2dp"
-        android:scrollbarStyle="outsideInset"
+        android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -77,8 +76,8 @@
         android:layout_marginStart="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:rcBackgroundColor="#b1b1b1"
-
+        app:rcBackgroundColor="#bfbfbf"
+        app:rcBackgroundPadding="0dp"
         app:rcMax="100"
         app:rcProgress="40"
         app:rcProgressColor="#7da8fd"
@@ -91,19 +90,19 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="0dp"
-        android:layout_height="38dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
 
         app:cardCornerRadius="0dp"
         app:cardElevation="0dp"
 
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintVertical_bias="0.365"
         custom:layout_constraintBottom_toTopOf="@+id/clock_lessons_recycler_view"
         custom:layout_constraintEnd_toEndOf="parent"
         custom:layout_constraintStart_toStartOf="parent"
-        custom:layout_constraintTop_toBottomOf="@+id/arc_progress_view"
-        app:layout_constraintHorizontal_bias="0.5">
+        custom:layout_constraintTop_toBottomOf="@+id/arc_progress_view">
 
         <TextView
             android:id="@+id/clock_info_label"
