Timetable clock is good

--- a/app/src/main/res/layout/clock_info_item.xml
+++ b/app/src/main/res/layout/clock_info_item.xml
@@ -8,7 +8,8 @@
     android:layout_width="match_parent"
     app:cardElevation="0dp"
     app:cardCornerRadius="0dp"
-    android:layout_height="68dp">
+    tools:layout_height="80dp"
+    android:layout_height="wrap_content">
 
     <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -18,46 +19,37 @@
             android:id="@+id/clock_info_item_number_lesson_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
             android:gravity="center_horizontal"
 
             android:textColor="#606060"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
+            tools:text="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="1" />
-
-        <View
-            android:background="#d2d2d2"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteY="0dp"
-            android:id="@+id/view"
-            app:layout_constraintStart_toEndOf="@+id/clock_info_item_number_lesson_text_view"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="24dp" />
+            android:layout_marginTop="8dp" />
 
         <TextView
             android:id="@+id/clock_info_item_title_lesson"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:textColor="#5e5e5e"
             android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="@+id/view"
-            tools:text="Русский язык"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="7dp" />
+            tools:text="Русский язык"
+            app:layout_constraintStart_toEndOf="@+id/clock_info_item_number_lesson_text_view"
+            android:layout_marginStart="16dp"
+            app:layout_constraintEnd_toStartOf="@+id/clock_info_item_is_now_image_view"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp" />
 
         <ImageView
             android:id="@+id/clock_info_item_is_now_image_view"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            app:srcCompat="@android:drawable/presence_online"
+            app:srcCompat="@android:drawable/presence_invisible"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -67,24 +59,33 @@
 
         <TextView
             android:id="@+id/clock_info_item_free_time_text_view"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
+
             android:textAppearance="@style/TextAppearance.AppCompat"
             android:textSize="10sp"
-            app:layout_constraintStart_toStartOf="@+id/view"
+            app:layout_constraintEnd_toStartOf="@+id/clock_info_item_is_now_image_view"
+            app:layout_constraintStart_toEndOf="@+id/clock_info_item_number_lesson_text_view"
             tools:text="перемена после урока 10 минут"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/clock_info_item_lesson_period"
+            app:layout_constraintVertical_bias="0.142" />
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+            android:id="@+id/clock_info_item_lesson_period"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
             android:text="с 8:30 до 9:15"
             android:textSize="12sp"
-            app:layout_constraintTop_toBottomOf="@+id/clock_info_item_title_lesson"
-            app:layout_constraintStart_toEndOf="@+id/view"
-            android:layout_marginStart="16dp" />
+            app:layout_constraintEnd_toStartOf="@+id/clock_info_item_is_now_image_view"
+            app:layout_constraintStart_toEndOf="@+id/clock_info_item_number_lesson_text_view"
+            app:layout_constraintTop_toBottomOf="@+id/clock_info_item_title_lesson" />
 
     </android.support.constraint.ConstraintLayout>
 
